--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         <!-- Uncomment below if you prefer to use an image logo -->
         <a href="index.html"><img src="assets/img/bramfeld_logo_red.png" alt="" class="img-fluid"></a>
       </div>
-
+      
+<!--Start navbar-->
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
