--- a/contact.html
+++ b/contact.html
@@ -42,15 +42,15 @@
   <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">contact@example.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
+        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:info@bramfeld.pl">info@bramfeld.pl</a></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+48 510 555 171</span></i>
       </div>
-      <div class="social-links d-none d-md-flex align-items-center">
+      <!--<div class="social-links d-none d-md-flex align-items-center">
         <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-      </div>
+      </div>-->
     </div>
   </section>
 
@@ -64,35 +64,20 @@
         <a href="index.html"><img src="assets/img/bramfeld_logo_red.png" alt="" class="img-fluid"></a>
       </div>
 
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">O nas</a></li>
-          <li><a href="services.html">Oferta</a></li>
-          <li><a href="testimonials.html">Testimonials</a></li>
-          <li><a href="portfolio.html">Realizacje</a></li>
-         
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
-          <li><a class="active" href="contact.html">Kontakt</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+     <!--Start navbar-->
+     <nav id="navbar" class="navbar">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">O nas</a></li>
+        <li><a href="services.html">Oferta</a></li>
+        <li><a href="portfolio.html">Realizacje</a></li>
+        <li><a class="active" href="contact.html">Kontakt</a></li>
+      </ul>
+      <i class="bi bi-list mobile-nav-toggle"></i>
+    </nav><!-- .navbar -->
+
+  </div>
+</header><!-- End Header -->
 
     </div>
   </header><!-- End Header -->
@@ -116,7 +101,7 @@
 
     <!-- ======= Contact Section ======= -->
     <div class="map-section">
-      <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+      <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2564.2180612858942!2d20.919446215597844!3d50.00726792707965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473d8573f8e56281%3A0xe19fe5b04c68f38e!2sBRAMFELD%20-%20Salon%20ekspozycyjny%20%7C%20Studio%20projektowania%20bram%20i%20ogrodze%C5%84!5e0!3m2!1spl!2spl!4v1651439016669!5m2!1spl!2spl" frameborder="0" allowfullscreen></iframe>
     </div>
 
     <section id="contact" class="contact">
@@ -193,45 +178,47 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Flattern</h3>
+            <h3>Bramfeld</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              ul. Szarych Szeregów 2 <br>
+              33-100 Tarnów<br>
+              Polska <br><br>
+              <strong>Telefon:</strong> +48 510 555 171<br>
+              <strong>Email:</strong> info@bramfeld.pl<br>
             </p>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Przydatne linki</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">O nas</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Oferta</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Realizacje</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Kontakt</a></li>
+              <br>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Ogólne warunki handlowe</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Oferta</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Budownictwo przemysłowe</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Zaprojektuj i wybuduj</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Budownictwo specjalistyczne i technologiczne</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Projektowanie</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Nadzór nad inwestycjami</a></li>
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
+          <!--<div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Join Our Newsletter</h4>
             <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
-          </div>
+          </div>-->
 
         </div>
       </div>
@@ -251,13 +238,13 @@
           Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
       </div>
-      <div class="social-links text-center text-md-right pt-3 pt-md-0">
+      <!--<div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
+      </div>-->
     </div>
   </footer><!-- End Footer -->
 
