zmiana formularza i php

--- a/kontakt.html
+++ b/kontakt.html
@@ -136,10 +136,10 @@
           </div>
 
         </div>
-
+<!--CONTACT FORM START-->
         <div class="row mt-5 justify-content-center" data-aos="fade-up">
           <div class="col-lg-10">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form id="contact-form" name="contact-form" action="forms/mail.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Imię" required>
@@ -152,18 +152,18 @@
                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Temat" required>
               </div>
               <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Treść wiadomości" required></textarea>
+                <textarea class="form-control" id="message" name="message" rows="5" placeholder="Treść wiadomości" required></textarea>
               </div>
               <div class="my-3">
-                <div class="loading">Ładowanie</div>
-                <div class="error-message"></div>
                 <div class="sent-message">Twoja wiadomość została wysłana. Dziękujemy!</div>
               </div>
-              <div class="text-center"><button type="submit">Wyślij wiadomość</button></div>
+              <div class="text-center"><button type="submit" onclick="document.getElementById('contact-form').submit();">Wyślij wiadomość</button></div>
+              <div class="status"></div>
             </form>
           </div>
 
         </div>
+  <!--CONTACT FORM END-->
 
       </div>
     </section><!-- End Contact Section -->
@@ -264,6 +264,8 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  
 
 </body>
 
