--- a/index.html
+++ b/index.html
@@ -384,6 +384,17 @@
 
   </main><!-- End #main -->
 
+  <!-- START Bootstrap-Cookie-Alert -->
+<div class="alert text-center cookiealert" role="alert">
+  <b>Lubisz ciasteczka?</b> &#x1F36A; Nasza strona korzysta z plików cookies w celu realizacji usług i zgodnie z Polityką Plików Cookies. <a href="https://cookiesandyou.com/" target="_blank">Learn more</a>
+
+  <button type="button" class="btn btn-primary btn-sm acceptcookies">
+      Akceptuję
+  </button>
+</div>
+<!-- END Bootstrap-Cookie-Alert -->
+
+
   <!-- ======= Footer ======= -->
   <footer id="footer">
 
@@ -477,6 +488,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/cookiealert.js"></script>
 
 </body>
 
