--- a/realizacje.html
+++ b/realizacje.html
@@ -102,10 +102,10 @@
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter="*" class="filter-active">1</li>
+              <li data-filter=".filter-app">2</li>
+              <li data-filter=".filter-card">3</li>
+              <li data-filter=".filter-web">4</li>
             </ul>
           </div>
         </div>
